<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="due_date">Due date</string>
    <string name="priority">Priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="save">Save</string>
    <string name="add_item">+ Add item</string>
</resources>
