<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".CreateNewItem"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/titleNewItem"
            android:inputType="text"
            android:hint="@string/title"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/descriptionNewItem"
            android:inputType="textMultiLine"
            android:lines="4"
            android:gravity="top|left"
            android:minLines="4"
            android:maxLines="6"
            android:hint="@string/description"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:text="@string/due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/dateNewItem"
            android:inputType="date"
            android:hint="@string/due_date"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:text="@string/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/priorityIndicator"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/lowButton"
                android:text="@string/low"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_margin="5dp"
                android:background="@drawable/mark_as_done_button_shape"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/mediumButton"
                android:text="@string/medium"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_margin="5dp"
                android:background="@drawable/button_shape"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/highButton"
                android:text="@string/high"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/high_priority_button_shape"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/button_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:text="@string/save" />

</LinearLayout>